# c_secrecy

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
examples/basic/: CMakeLists.txt  README.md  main.c
include/: c_secrecy.h  c_secrecy_error.h
src/: c_secrecy.c
tests/unit/: CMakeLists.txt
tests/unit/include/: test_unit_c_secrecy.h
tests/unit/src/: test_unit_c_secrecy.c  test_unit_c_secrecy_char.c  test_unit_c_secrecy_custom_struct.c  test_unit_c_secrecy_error.c  test_unit_c_secrecy_errors.c  test_unit_c_secrecy_float.c  test_unit_c_secrecy_int.c
